[package]
name = "zf-server"
version = "0.5.0"
authors = [ "Dylan-Matthew Garza <dylanmatthew.garza@gmail.com" ]
repository = "git@github.com:DMGDy/zf-webserver-app.git"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3.7"
libc = "0.2.159"
colored = "2.1.0"
